# mdreg

./: .buildinfo  .gitignore  CITATION.cff  Contributors.md  MANIFEST.in  MDR.html  MDR.py  README.md  README.rst  Tools.html  __init__.py  examples.py  examples_3D.py  genindex.html  index.html  main.py  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  sg_execution_times.html  sops.txt
.github/workflows/: auto-pep8.yaml  gh-pages.yaml  python-publish.yaml  reference-manual.yaml  webpage.yaml
Elastix_Parameters_Files/iBEAt/: BSplines_DCE.txt  BSplines_DTI.txt  BSplines_T1 - original.txt
MDR/: MDR.py  Tools.py
MDR_registration_output/DWI/: DWI_largest_deformations.csv
MDR_registration_output/MT/: MT_largest_deformations.csv
MDR_registration_output/T2/: T2_largest_deformations.csv
MDR_registration_output/T2star/: T2star_largest_deformations.csv
_downloads/009762159766f41d2ee8c4d80bd42755/: plot_getting_started.ipynb
_downloads/18827449d827b33cb1a95b753ba0d0f4/: mdreg-elastix-params-1.py
_downloads/1f4a64f1f21911d0b921f5a943a9f419/: plot_multislice.ipynb
_downloads/2d2025f3fb3aa118ad07abea6d94150d/: plot_getting_started_defo.ipynb
_downloads/3f182b48f68d9a1dc2d18142d539d426/: plot_3Dexample_vfa_nonlin.ipynb
_downloads/423aeff089edae3dc82ab2474a441877/: plot_3Dexample_vfa.ipynb
_downloads/4349c2bdebb8f9dcf233434f2f279c5f/: plot_getting_started_defo.py
_downloads/611f52476724ade7acfbcb42464a1dbb/: plot_multislice.py
_downloads/cae80a14e93c81a460e3e304ad9f18d0/: plot_getting_started_custom.ipynb
_downloads/d060f45b7e3cba0b501c39fdef743930/: plot_3Dexample_vfa_nonlin.py
_downloads/e8c719de73b978841badb4a9cd570e8c/: plot_getting_started.py
_modules/: index.html
_modules/mdreg/: elastix.html  main.html  models.html  plot.html  skimage.html  utils.html
_sources/: index.rst.txt  sg_execution_times.rst.txt
_sources/about/: index.rst.txt
_sources/contribute/: index.rst.txt
_sources/guide/: coreg_dict.rst.txt  getting_started.rst.txt  index.rst.txt  installation.rst.txt  plot_dict.rst.txt
_sources/reference/: elastix.rst.txt  index.rst.txt  mdr.rst.txt  models.rst.txt  plot.rst.txt  skimage.rst.txt
_sources/releases/: index.rst.txt  release_0.3.0.rst.txt  release_0.4.0.rst.txt
about/: index.html
contribute/: index.html
dbdicom/: __init__.py  dicm.py  examples.py  folder.py  message.py  utilities.py
dbdicom/classes/: MRimage.py  database.py  enhancedMRimage.py  image.py  instance.py  parametric_map.py  patient.py  record.py  secondary_capture_image.py  series.py  study.py
dev/: sops.txt
docs/: MDR.html  README.md  index.html  make.bat  requirements.txt  setup.html
docs/MDR/: MDR.html  index.html
docs/MDR-Library/: MDR.html
docs/examples/: README.rst
docs/models/: iBEAt_DCE.html  iBEAt_DTI.html  iBEAt_DWI_monoexponential.html  iBEAt_T1.html  iBEAt_T2.html  iBEAt_T2star.html  index.html
docs/source/: conf.py  index.rst  make_animations.py  sg_execution_times.rst
docs/test_MDR/: MDR_test_DCE.html  MDR_test_DTI.html  MDR_test_DWI.html  MDR_test_T1.html  MDR_test_T2.html  MDR_test_T2star.html  index.html  (+1 more)
guide/: coreg_dict.html  fit_dict.html  getting_started.html  index.html  info.html  installation.html  plot_dict.html
mdreg/: README.md  __init__.py  main.py  requirements.txt
models/: DTI.py  DWI_monoexponential.py  README.md  T1.py  T2.py  T2star.py  constant_model.py  iBEAt_DCE.py  iBEAt_DTI.py  iBEAt_DWI_monoexponential.py  iBEAt_IVIM_monoexponential.py  iBEAt_T1.py  iBEAt_T2.py  iBEAt_T2star.py
models_signal/: DTI.py  DWI_monoexponential.py  DWI_monoexponential_simple.py  README.md  T1.py  T1_simple.py  T2.py  T2_simple.py  T2star.py  T2star_simple.py  constant.py  exp_decay.py  two_compartment_filtration_model_DCE.py
pyMDR/: MDR.py
reference/: elastix.html  index.html  mdr.html  models.html  plot.html  skimage.html  utils.html
releases/: index.html  release_0.3.0.html  release_0.3.9.html  release_0.4.0.html  release_0.4.1.html  release_0.4.2.html  release_0.4.3.html  release_0.4.4.html
results/: README.md
test_MDR/: MDR_test_DCE.py  MDR_test_DTI.py  MDR_test_DWI.py  MDR_test_T1.py  MDR_test_T2.py  MDR_test_T2star.py  MDR_test_main.py  MDR_test_main_DTI.py  iBEAt_MDR_main.py
tests/: MDR_test_DCE.py  MDR_test_DTI.py  MDR_test_DWI.py  MDR_test_MT.py  MDR_test_T1.py  MDR_test_T2.py  MDR_test_T2star.py  MDR_test_main.py  _test_coreg.py  _test_coregseries.py  _test_mdreg.py  _test_models.py
(+1038 files in other folders)
