# https://packaging.python.org/en/latest/specifications/pyproject-toml/#pyproject-toml-spec

[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=61.2']

[project]
name = "mdreg"
version = "0.4.4"
dependencies = [
  'importlib-resources>=1.1.0',
  'tqdm',
  "numpy<=1.26.4", 
  "scipy",
  "matplotlib",
  "Pillow",
  "itk-elastix",
  "scikit-image",

#  "SimpleITK", 
]

# optional information
description = "Model-driven image registration"
readme = "README.rst"
authors = [
  { name = "Steven Sourbron", email = "s.sourbron@sheffield.ac.uk" }
  ]
license = { file = "LICENSE" }
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  'Development Status :: 3 - Alpha',

  # Indicate who your project is intended for
  'Intended Audience :: Developers',
  'Intended Audience :: Science/Research',
  'Topic :: Scientific/Engineering',
  'Environment :: Console',
  'Operating System :: OS Independent',

  'License :: OSI Approved :: Apache Software License',
  "Programming Language :: Python",
  "Programming Language :: Python :: 3"
]
keywords = ['python', "medical imaging", "motion correction", "registration"]

requires-python = ">=3.6"

[project.urls]
"Homepage" = "https://qib-sheffield.github.io/mdreg/"
"Source Code" = "https://github.com/QIB-Sheffield/mdreg"

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

#[tool.setuptools]
#packages = ["mdreg"]

[tool.setuptools.packages.find]
where = ["src"]







